--- a/src/ToursPage.css
+++ b/src/ToursPage.css
@@ -63,8 +63,7 @@
     margin-bottom: 0.5rem;
   }
   
-  .tour-duration,
-  .tour-price {
+  .tour-duration {
     font-size: 1rem;
     color: #4a5568;
     margin-bottom: 0.5rem;
