--- a/src/BlogPage.css
+++ b/src/BlogPage.css
@@ -47,6 +47,11 @@
     width: 100%;
     height: 14rem;
     object-fit: cover;
+    image-rendering: auto;
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
   }
   
   .blog-content {
