--- a/src/DealPage.css
+++ b/src/DealPage.css
@@ -50,6 +50,11 @@
     height: 200px;
     object-fit: cover;
     border-radius: 8px 8px 0 0;
+    image-rendering: auto;
+    transform: translateZ(0);
+    -webkit-transform: translateZ(0);
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
   }
   
   .deal-content {
