--- a/src/TourCard.css
+++ b/src/TourCard.css
@@ -47,6 +47,11 @@
   margin-bottom: 10px;
   max-height: 180px;
   object-fit: cover;
+  image-rendering: auto;
+  transform: translateZ(0);
+  -webkit-transform: translateZ(0);
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 .duration-badge {
