--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.6;
-  color: #333;
+  color: #1a202c;
+  background: #fafbfc;
+  min-height: 100vh;
 }
 
 code {
